--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Gravity Trails Build Version.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Gravity Trails Build Version.data.gz",
-        frameworkUrl: buildUrl + "/Gravity Trails Build Version.framework.js.gz",
-        codeUrl: buildUrl + "/Gravity Trails Build Version.wasm.gz",
+        dataUrl: buildUrl + "/Gravity Trails Build Version.data.unityweb",
+        frameworkUrl: buildUrl + "/Gravity Trails Build Version.framework.js.unityweb",
+        codeUrl: buildUrl + "/Gravity Trails Build Version.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "SS - Gravity Trails",
